Refactor SelectQuery: make it immutable